# storage/api-docs/api-docs.json
@@ -141,13 +141,13 @@
                 ]
             }
         },
-        "/api/profile": {
+        "/api/profiles/me": {
             "get": {
                 "tags": [
                     "Profile"
                 ],
                 "summary": "Отримати дані свого профілю",
-                "operationId": "f1784685f8270527da017b3616288443",
+                "operationId": "8cc9481846e2b73ad4542a5c2012095c",
                 "responses": {
                     "200": {
                         "description": "Успішна відповідь",
@@ -205,7 +205,7 @@
                     "Profile"
                 ],
                 "summary": "Оновити дані профілю",
-                "operationId": "875e8801180287e4193f1aced9023960",
+                "operationId": "5d815a5fb8156c1f11caccf0e6241175",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -345,14 +345,14 @@
                 }
             }
         },
-        "/api/my-news": {
+        "/api/users/me/news": {
             "get": {
                 "tags": [
                     "My News"
                 ],
                 "summary": "Отримати список власних новин",
                 "description": "Повертає пагінований список усіх новин (включаючи чернетки), створених поточним користувачем.",
-                "operationId": "70f1ac503c7d466c1e93155a7f89c789",
+                "operationId": "3802fca5b928d1b280fa6278354709ab",
                 "responses": {
                     "200": {
                         "description": "Успішно"
@@ -373,7 +373,7 @@
                 ],
                 "summary": "Створити нову новину",
                 "description": "Створення новини з мультимедійними блоками через multipart/form-data.",
-                "operationId": "70865acb358bb80f3a70cf928d6b357b",
+                "operationId": "16e1cbc6f3f1b30ae26c8bdf071ad18f",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -435,13 +435,13 @@
                 ]
             }
         },
-        "/api/my-news/{id}": {
+        "/api/users/me/news/{id}": {
             "get": {
                 "tags": [
                     "My News"
                 ],
                 "summary": "Переглянути свою новину",
-                "operationId": "04a98d08bb6b1af0f348aad9e7449997",
+                "operationId": "35c7676c4f4a4d4f9a3fcad8383faeae",
                 "parameters": [
                     {
                         "name": "id",
@@ -469,7 +469,7 @@
                 ],
                 "summary": "Оновити існуючу новину",
                 "description": "Для оновлення з файлами використовуйте POST та поле _method=PUT.",
-                "operationId": "df6a4bc6827db0c9f322fdf6343eb34b",
+                "operationId": "6db270b14435cfd7259b3f2594b3a7f9",
                 "parameters": [
                     {
                         "name": "id",
@@ -522,7 +522,7 @@
                     "My News"
                 ],
                 "summary": "Видалити новину",
-                "operationId": "b29fc32d17bcd5c121f99f630fb7a048",
+                "operationId": "f6eb3bdb2a36946742924834bbae6281",
                 "parameters": [
                     {
                         "name": "id",
